--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,44 @@
 <h1>{{ title1 }}</h1>
 <h1>{{ subtitle }}</h1>
 <h1>h1 To do application</h1>
+
+
+<div class="main">
+  <h1>h1{{ componentTitle }}</h1>
+  <h2>What would you like to do today?</h2>
+
+  <ul>
+    <li *ngFor="let item of items">{{item.description}}</li>
+  </ul>
+
+  <label for="addItemInput">What would you like to do today?</label>
+
+  <input #newItem placeholder="add an item" (keyup.enter)="addItem(newItem.value); newItem.value = ''"
+    class="lg-text-input" id="addItemInput" />
+
+  <button class="btn-primary" (click)="addItem(newItem.value)">Add</button>
+
+  <div class="btn-wrapper">
+    <button
+      class="btn btn-menu"
+      [class.active]="filter == 'all'"
+      (click)="filter = 'all'">
+      All
+    </button>
+
+    <button
+      class="btn btn-menu"
+      [class.active]="filter == 'active'"
+      (click)="filter = 'active'">
+      To Do
+    </button>
+
+    <button
+      class="btn btn-menu"
+      [class.active]="filter == 'done'"
+      (click)="filter = 'done'">
+      Done
+    </button>
+  </div>
+</div>
+
